// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with login prop 1`] = `
.c0 {
  position: relative;
  height: 100%;
  margin: 0;
  padding: 0;
  background: black:#002;
  white: #fff;
  blue: #007;
  dark-blue: #004;
  light-blue: #44b;
  red: #b44;
  green: #4b4;
  orange: #fa3;
  purple: #a3f;
  neon-blue: #3af;
  gray: #667;
  light-gray: #ddd;
  white-smoke: #f5f5f5;
  background-image: url(stadium.jpg);
  background-repeat: no-repeat;
  background-position: right top;
  background-size: 70% auto;
}

<div
  className="c0"
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  position: relative;
  height: calc(100% - 70px);
  margin: 0;
  padding: 0;
  background: black:#002;
  white: #fff;
  blue: #007;
  dark-blue: #004;
  light-blue: #44b;
  red: #b44;
  green: #4b4;
  orange: #fa3;
  purple: #a3f;
  neon-blue: #3af;
  gray: #667;
  light-gray: #ddd;
  white-smoke: #f5f5f5;
  background-image: none;
  background-repeat: no-repeat;
  background-position: right top;
  background-size: 70% auto;
}

<div
  className="c0"
/>
`;
